added smooth scroll behavious

--- a/index.html
+++ b/index.html
@@ -180,6 +180,16 @@
                 sidebarSec.style.display = 'none';
             });
         }
+        
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', smoothScroll);
+    });
+
+    function smoothScroll(e) {
+        e.preventDefault();
+        const targetId = this.getAttribute('href');
+        document.querySelector(targetId).scrollIntoView({ behavior: 'smooth' });
+    }
     </script>
 </body>
 </html>
